--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <artifactId>RoseDB</artifactId>
     <groupId>pw.mihou</groupId>
     <version>1.2.0</version>
+    <packaging>war</packaging>
     <name>RoseDB</name>
     <description>A simple NoSQL Database that is written completely in Java.</description>
     <url>https://github.com/ShindouMihou/RoseDB/</url>
@@ -57,7 +58,7 @@
                 <version>3.3.0</version>
                 <configuration>
                     <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                        <descriptorRef>war-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <finalName>RoseDB</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
@@ -67,7 +68,7 @@
                         </manifest>
                     </archive>
                     <formats>
-                        <format>jar</format>
+                        <format>war</format>
                     </formats>
                 </configuration>
                 <executions>
